--- a/css/bandoso.css
+++ b/css/bandoso.css
@@ -512,7 +512,17 @@ h1 {
 }
 
 .toggle-icon {
-  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+}
+
+.toggle-icon svg {
+  width: 100%;
+  height: 100%;
 }
 
 .toggle-text {
